[package]
name = "nautile"
version = "0.1.0"
edition = "2021"
description = "Nautile - navigateur web souverain francais, moteur no_std pour Bouchaud OS"
license = "MIT"
repository = "https://github.com/bcharthur/nautile-navigateur"

[lib]
name = "nautile"
path = "src/lib.rs"

[features]
default = []
bouchaud_os = []

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
lto = true
