[workspace]
resolver = "2"
members = [
    "apps/nautile-desktop", "apps/nautile-headless", "apps/nautile-test-runner", "apps/nautile-devtools",
    "crates/winit", "crates/wgpu",
    "crates/nautile_common",
    "crates/nautile_platform",
    "crates/nautile_browser_core",
    "crates/nautile_browser_ui",
    "crates/nautile_ipc",
    "crates/nautile_process",
    "crates/nautile_url",
    "crates/nautile_net",
    "crates/nautile_http",
    "crates/nautile_fetch",
    "crates/nautile_cache",
    "crates/nautile_cookies",
    "crates/nautile_websocket",
    "crates/nautile_loader",
    "crates/nautile_html",
    "crates/nautile_dom",
    "crates/nautile_dom_events",
    "crates/nautile_css",
    "crates/nautile_style",
    "crates/nautile_layout",
    "crates/nautile_paint",
    "crates/nautile_compositor",
    "crates/nautile_gpu",
    "crates/nautile_image",
    "crates/nautile_font",
    "crates/nautile_js_lexer",
    "crates/nautile_js_parser",
    "crates/nautile_js_ast",
    "crates/nautile_js_bytecode",
    "crates/nautile_js_vm",
    "crates/nautile_js_gc",
    "crates/nautile_js_runtime",
    "crates/nautile_js_objects",
    "crates/nautile_js_builtins",
    "crates/nautile_js_modules",
    "crates/nautile_js_regex",
    "crates/nautile_js_jit",
    "crates/nautile_bindings",
    "crates/nautile_webapi",
    "crates/nautile_event_loop",
    "crates/nautile_storage",
    "crates/nautile_security",
    "crates/nautile_devtools_protocol",
    "crates/nautile_devtools_agent",
    "crates/nautile_devtools_dom",
    "crates/nautile_devtools_network",
    "crates/nautile_devtools_console",
    "crates/nautile_testing",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nautile contributors"]
license = "MIT"

